# mlops-toilet-2026

./: .gitignore  Dockerfile.airflow  ML_PIPELINE_PLAN.md  README.md  docker-compose.yml  pyproject.toml  test.ipynb
airflow/: init-db.sql  requirements.txt
airflow/dags/: toilet_accessible_ml_pipeline.py  toilet_ml_pipeline.py  toilet_pipeline.py
experiments/: exp_01_baseline.md  exp_02_hyperparam.md  exp_03_features.md
ml_models/: __init__.py  accessible_features.py  config.py  features.py  predict.py  predict_accessible.py  train.py  train_accessible_nn.py  train_accessible_xgb.py  train_nn.py  visualize.py
spark_jobs/: accessible_features.py  job.py  ml_features.py
