[tool.poetry]
name = "mlops-toilet-2026"
version = "0.1.0"
description = "Lab 2: model training + MLflow tracking for toilet dataset"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "toilet_ml", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.2.2"
numpy = "^2.0.2"
scikit-learn = "^1.5.2"
mlflow = "^2.16.0"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
catboost = "^1.2.7"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
ruff = "^0.6.8"

[tool.poetry.scripts]
toilet-ml = "toilet_ml.cli:main"

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
